# hedgr-copilot

./: .cursorrules  .dockerignore  .gitignore  .replit  AGENTS.md  DESIGN.md  Dockerfile  PR_BODY.md  README.md  Untitled  design-qa.md  docker-compose.yml  doppler.yaml  package-lock.json  package.json  pnpm-builds.yaml  pnpm-lock.yaml  renovate.json  tailwind.config.js  tsconfig.base.json  tsconfig.json  turbo.json
.changeset/: config.json
.cursor/: rules.md  settings.json
.cursor/commands/: adversarial-review.md  bridge-snapshot-refresh-handoff.md  closeout.md  execution.md  governance.md  mvp-process-review.md  propose-next-ticket.md  weekly-review.md
.cursor/prompts/: docs.md  patch.md  refactor.md
.github/: CODEOWNERS  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: agent.md
.github/scripts/: bootstrap-labels.sh
.github/workflows/: agent-evidence-pack.yml  bridge-snapshots.yml  ci.yml  e2e-smoke.yml  e2e.yml  (+2 more)
apps/backend/: README.md  pyproject.toml
apps/backend/src/: __main__.py  app.py
apps/backend/src/lib/: correlation.py  errors.py  store.py  validation.py
apps/backend/src/routes/: fx.py  tx.py
apps/backend/tests/: test_app_entrypoint.py  test_domain_errors_and_correlation.py  test_fx.py  test_health.py  test_tx_idempotency.py
docs/: HEDGR_EXECUTION_SYSTEM.md  Hedgr_Scaffolding_Progress.md  Hedgr_Scaffolding_Progress_Archive.md  README.md  ai-copilot.md  ci.md  local-dev.md  observability.md  qa-checklist.md  renovate.md  runbook.md  secrets.md  trust.md  ux-principles.md
scripts/: trust-phrases.allowlist.txt  validate-env.ts
(+612 files in other folders)
