[tool.poetry]
name = "hedgr-backend"
version = "0.1.0"
description = "DeFi-powered savings wallet for users in volatile markets"
authors = ["Musalwa Hibajene <mhibajeney@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"