[tool.poetry]
name = "hedgr-backend"
version = "0.1.0"
description = "DeFi-powered savings wallet for users in volatile markets"
authors = ["Musalwa Hibajene <mhibajeney@gmail.com>

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100"
uvicorn = {extras = ["standard"], version = "^0.22"}

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload"